# liboqs-rust

./: .cz.toml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
cstr_core/: all.html  index.html  macro.cstr.html  sidebar-items.js  struct.CStr.html  struct.CString.html  struct.FromBytesWithNulError.html  struct.IntoStringError.html  struct.NulError.html  type.c_char.html
cty/: all.html  index.html  type.c_char.html  type.c_double.html  type.c_float.html  type.c_int.html  type.c_long.html  type.c_longlong.html  type.c_schar.html  type.c_short.html  type.c_uchar.html  type.c_uint.html  type.c_ulong.html  type.c_ulonglong.html  type.c_ushort.html  type.c_void.html  type.int16_t.html  type.int32_t.html  type.int64_t.html  type.int8_t.html  type.intmax_t.html  type.intptr_t.html  type.ptrdiff_t.html  type.size_t.html  type.ssize_t.html  type.uint16_t.html  type.uint32_t.html  type.uint64_t.html  type.uint8_t.html  type.uintmax_t.html  type.uintptr_t.html
libc/: enum.DIR.html  enum.FILE.html  enum.fpos64_t.html  enum.fpos_t.html  enum.timezone.html  enum.tpacket_versions.html  struct.Dl_info.html  struct.Elf32_Chdr.html  struct.Elf32_Ehdr.html  struct.Elf32_Phdr.html  struct.Elf32_Shdr.html  struct.Elf32_Sym.html  struct.Elf64_Chdr.html  struct.Elf64_Ehdr.html  struct.Elf64_Phdr.html  struct.Elf64_Shdr.html  struct.Elf64_Sym.html  struct.__c_anonymous__kernel_fsid_t.html  struct.__c_anonymous_elf32_rel.html  struct.__c_anonymous_elf32_rela.html  struct.__c_anonymous_elf64_rel.html  struct.__c_anonymous_elf64_rela.html  struct.__c_anonymous_ifru_map.html  struct.__c_anonymous_ptrace_syscall_info_entry.html  struct.__c_anonymous_ptrace_syscall_info_exit.html  struct.__c_anonymous_ptrace_syscall_info_seccomp.html  struct.__c_anonymous_sockaddr_can_j1939.html  struct.__c_anonymous_sockaddr_can_tp.html  struct.__exit_status.html  struct.__timeval.html  struct._libc_fpstate.html  struct._libc_fpxreg.html  struct._libc_xmmreg.html  struct.addrinfo.html  struct.af_alg_iv.html  struct.aiocb.html  struct.arpd_request.html  struct.arphdr.html  struct.arpreq.html  struct.arpreq_old.html  (+246 more)
memchr/: all.html  fn.memchr.html  fn.memchr2.html  fn.memchr2_iter.html  fn.memchr3.html  fn.memchr3_iter.html  fn.memchr_iter.html  fn.memrchr.html  fn.memrchr2.html  fn.memrchr2_iter.html  fn.memrchr3.html  fn.memrchr3_iter.html  fn.memrchr_iter.html  index.html  struct.Memchr.html  struct.Memchr2.html  struct.Memchr3.html
memchr/memmem/: enum.Prefilter.html  fn.find.html  fn.find_iter.html  fn.rfind.html  fn.rfind_iter.html  struct.FindIter.html  struct.FindRevIter.html  struct.Finder.html  struct.FinderBuilder.html  struct.FinderRev.html
openssl_sys/: all.html  constant.AES_BLOCK_SIZE.html  constant.AES_DECRYPT.html  constant.AES_ENCRYPT.html  constant.AES_MAXNR.html  constant.ASN1_R_HEADER_TOO_LONG.html  constant.BIO_CTRL_DGRAM_GET_CAPS.html  constant.BIO_CTRL_DGRAM_GET_LOCAL_ADDR_CAP.html  constant.BIO_CTRL_DGRAM_GET_LOCAL_ADDR_ENABLE.html  constant.BIO_CTRL_DGRAM_GET_MTU.html  constant.BIO_CTRL_DGRAM_GET_NO_TRUNC.html  constant.BIO_CTRL_DGRAM_QUERY_MTU.html  constant.BIO_CTRL_DGRAM_SET_CAPS.html  constant.BIO_CTRL_DGRAM_SET_LOCAL_ADDR_ENABLE.html  constant.BIO_CTRL_DGRAM_SET_MTU.html  constant.BIO_CTRL_DGRAM_SET_NO_TRUNC.html  constant.BIO_CTRL_EOF.html  constant.BIO_CTRL_FLUSH.html  constant.BIO_CTRL_INFO.html  constant.BIO_C_SET_BUF_MEM_EOF_RETURN.html  constant.BIO_FLAGS_IO_SPECIAL.html  constant.BIO_FLAGS_READ.html  constant.BIO_FLAGS_RWS.html  constant.BIO_FLAGS_SHOULD_RETRY.html  constant.BIO_FLAGS_WRITE.html  constant.BIO_TYPE_NONE.html  constant.BN_FLG_CONSTTIME.html  constant.BN_FLG_MALLOCED.html  constant.BN_FLG_SECURE.html  constant.BN_FLG_STATIC_DATA.html  constant.CMS_ASCIICRLF.html  constant.CMS_BINARY.html  constant.CMS_CRLFEOL.html  constant.CMS_DEBUG_DECRYPT.html  constant.CMS_DETACHED.html  constant.CMS_KEY_PARAM.html  constant.CMS_NOATTR.html  constant.CMS_NOCERTS.html  constant.CMS_NOCRL.html  constant.CMS_NOINTERN.html  (+2885 more)
oqs/: Cargo.toml  README.md  all.html  build.rs  enum.Error.html  fn.init.html  index.html  macro.newtype_buffer!.html  macro.newtype_buffer.html  sidebar-items.js  type.Result.html
oqs-sys/: Cargo.toml  README.md  build.rs
oqs-sys/src/: lib.rs
oqs/kem/: enum.Algorithm.html  index.html  sidebar-items.js  struct.Ciphertext.html  struct.CiphertextRef.html  struct.Kem.html  struct.KeypairSeed.html  struct.KeypairSeedRef.html  struct.PublicKey.html  struct.PublicKeyRef.html  struct.SecretKey.html  struct.SecretKeyRef.html  struct.SharedSecret.html  struct.SharedSecretRef.html
oqs/sig/: enum.Algorithm.html  index.html  sidebar-items.js  struct.PublicKey.html  struct.PublicKeyRef.html  struct.SecretKey.html  struct.SecretKeyRef.html  struct.Sig.html  struct.Signature.html  struct.SignatureRef.html  type.CtxStr.html  type.Message.html
oqs/src/: kem.rs  lib.rs  macros.rs  sig.rs
oqs_sys/: all.html  index.html  sidebar-items.js
oqs_sys/kem/: constant.OQS_KEM_alg_bike_l1.html  (+367 more)
serde/: trait.Deserialize.html  trait.Deserializer.html  trait.Serialize.html  trait.Serializer.html
syn/: all.html  enum.AttrStyle.html  enum.BinOp.html  enum.CapturedParam.html  enum.Data.html  enum.Expr.html  enum.FieldMutability.html  enum.Fields.html  enum.FnArg.html  enum.ForeignItem.html  enum.GenericArgument.html  enum.GenericParam.html  enum.ImplItem.html  enum.ImplRestriction.html  enum.Item.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.Pat.html  enum.PathArguments.html  enum.PointerMutability.html  enum.RangeLimits.html  enum.ReturnType.html  enum.StaticMutability.html  enum.Stmt.html  enum.TraitBoundModifier.html  enum.TraitItem.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.UseTree.html  enum.Visibility.html  enum.WherePredicate.html  fn.parse.html  fn.parse2.html  fn.parse_file.html  fn.parse_str.html  index.html  macro.Token.html  (+171 more)
(+1552 files in other folders)
