[package]
name = "oqs-sys"
version = "0.7.201"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2021"
links = "oqs"
description = "Bindings to liboqs"
readme = "../README.md"
repository = "https://github.com/open-quantum-safe/liboqs-rust"
license = "MIT OR Apache-2.0"

# Exclude certain liboqs files
include = ["README.md", "build.rs", "src/**", "liboqs/.CMake/**", "liboqs/src/**", "liboqs/tests/**", "liboqs/*.txt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
bindgen = "0.65"
build-deps = "0.1"

[features]
default = ["openssl", "kems", "sigs"]
openssl = []
docs = []
non_portable = []
# algorithms: KEMs
kems = ["classic_mceliece", "frodokem", "hqc", "kyber", "ntruprime"]
bike = []  # BIKE is enabled by build.rs on non-windows targets
classic_mceliece = []
frodokem = []
hqc = []
kyber = []
ntruprime = []
# algorithms: Signature schemes
sigs = ["dilithium", "falcon", "sphincs"]
dilithium = []
falcon = []
sphincs = []

[package.metadata.docs.rs]
features = ["docs"]
