[package]
name = "oqs"
version = "0.10.0"
authors = ["Thom Wiggers <thom@thomwiggers.nl>"]
edition = "2021"
description = "A Rusty interface to Open-Quantum-Safe's liboqs"
readme = "../README.md"
repository = "https://github.com/open-quantum-safe/liboqs-rust"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2"
cstr_core = { version = "0.2", default-features = false, features = ["alloc"] }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive", "alloc"] }

[dependencies.oqs-sys]
path = "../oqs-sys"
version = "0.10.0"
default-features = false

[features]
default = ["oqs-sys/openssl", "kems", "sigs", "std"]
std = []
non_portable = ["oqs-sys/non_portable"]
vendored = ["oqs-sys/vendored"]

# algorithms: KEMs
kems = ["oqs-sys/kems", "classic_mceliece", "frodokem", "hqc", "kyber", "ml_kem", "ntruprime"]
bike = ["oqs-sys/bike"]  # not supported on Windows or 32-bit ARM
classic_mceliece = ["oqs-sys/classic_mceliece"]
frodokem = ["oqs-sys/frodokem"]
hqc = ["oqs-sys/hqc"]
kyber = ["oqs-sys/kyber"]
ml_kem = ["oqs-sys/ml_kem"]
ntruprime = ["oqs-sys/ntruprime"]
# algorithms: Signature schemes
sigs = ["oqs-sys/sigs", "cross", "dilithium", "falcon", "mayo", "ml_dsa", "sphincs"]
cross = ["oqs-sys/cross"]
dilithium = ["oqs-sys/dilithium"]
falcon = ["oqs-sys/falcon"]
mayo = ["oqs-sys/mayo"]
ml_dsa = ["oqs-sys/ml_dsa"]
sphincs = ["oqs-sys/sphincs"]
